Fixes painting issues when scaling a QGraphicsView.

The problem was that the 'exposed rectangle' passed to the Item's paint() function was rounded to Int values, whereas the one passed to drawBackground and drawForeground was not.

Autotest included.

Task-number: QTBUG-5859
Reviewed-by: bnilsen